# AGH_IM_C

./: .gitignore
Algorithm_Djikstria/: CMakeLists.txt  main.c
CMake/: CMakeLists.txt
CMake_and_libraries/: CMakeLists.txt
CMake_and_libraries/src/: hello.c  hello.h
Sort/: CMakeLists.txt
Sort/src/: bubble_sort.c  insertion_sort.c  main.c  merge_sort.c  quick_sort.c  sort.h
Zadanie_hello_dynamic/: CMakeLists.txt
Zadanie_hello_dynamic/src/: hello.c  hello.h  main.c
encrpting/: CMakeLists.txt  main.c
game_of_life/: CMakeLists.txt  main.c
kolokwium_1/: CMakeLists.txt  historyjka.txt  losowosc.c  notes.md  pliki.c  struktura.c  tablice_dynamiczne_2wymiarowe.c  transponowanie_macierzy.c  zliczanie_slow_z_pliku.c
metoda_trapezow/: CMakeLists.txt  cmake.md
metoda_trapezow/src/: function.c  function.h  integrate.c  integrate.h  main.c
